--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Instructions for publishing specimens</title>
+    <title>Instructions for publishing Tajik herbarium specimens</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <style>
       .container { max-width: 1012px; margin-top: 2em; }
@@ -14,11 +14,12 @@
       .instruction-block .text { display: inline-block; width: 500px; margin-left: 2em; vertical-align:top; }
       body { font-size: 1.2em; }
       .instruction-block h2 { margin-top: 1em;}
+      h2 a { font-size: 0.5em; color: #5b8269 }
     </style>
   </head>
   <body>
     <div class="container">
-      <h1>Instructions for publishing specimens</h1>
+      <h1>Instructions for publishing Tajik herbarium specimens</h1>
       <p><em>These steps should be followed every week on Wednesdays and Thursdays from 14:00 - 16:00. Alternatively, use your own schedule - but it is IMPORTANT to set aside <strong>regular</strong> time for this task.</em></p>
       <div class="instruction-block">
         <img src="img/setup.svg">
@@ -46,8 +47,8 @@
         <div class="text">
           <h2 id="step3">Step 3</h2>
           <p>Place the specimen on the scanner mat, and take a picture.</p>
-          <p><a href="faq.html#scanner-operation">How do I take a picture with the scanner?</a></p>
-          <p><a href="faq.html#scanner-settings">What scanner settings should I use?</a></p>
+          <p><a href="#software">How do I take a picture with the scanner?</a></p>
+          <p><a href="#software">What scanner settings should I use?</a></p>
         </div>
       </div>
       <div class="instruction-block">
@@ -64,7 +65,7 @@
           <h2>Step 5</h2>
           <p>Unplug the scanner and move your laptop to a location with internet access.</p>
           <p>Open <a href="https://storage.gbif-no.sigma2.no/minio/tajik-img-processing/">https://storage.gbif-no.sigma2.no/minio/tajik-img-processing/ or https://bit.ly/cesp-tajik</a>. Log in using the username 'tajik-upload' and the password which has been provided to you.</p>
-          <p><a href="mailto:helpdesk@gbif.no?Subject=Tajik%20image%20uploader%20password%20reset&body=Please%20send%20me%20a%20new%20password">I have lost or forgotten my password</a></p>
+          <p><a target="_blank" href="mailto:helpdesk@gbif.no?Subject=Tajik%20image%20uploader%20password%20reset&body=Please%20send%20me%20a%20new%20password">I have lost or forgotten my password</a></p>
         </div>
       </div>
       <div class="instruction-block">
@@ -80,7 +81,7 @@
         <p>You have now completed the publication process.</p>
         <p>We have a script which processes the images, renames them and moves them to a different your location. If you refresh the folder, you will see your images disappearing. When there is a problem with the image, we do not move it but keep in the folder to investigate. Please do not upload the same images twice if they seem to "disappear" from your folder.</p>
       </div>
-      <hr>
+      <hr style="height: 40px;">
       <h1>FAQs</h1>
       <h2 id="why-publish">Why should I publish specimens?</h2>
       <p><a href="https://docs.google.com/presentation/d/142nnrUZIx2wTuGetnJFi2CIXxpkONFa16Am5L4Zrjg4/edit?usp=sharing">Review the slides presented at the GBIF Tajikistan CESP training workshop (26 - 28 September 2022)</a></p>
@@ -98,24 +99,23 @@
       <h2 id="data-correction">I have seen some mistakes on the dataset page for my dataset. How do I correct this?</h2>
       <p>[More information coming soon...]</p>
 
-      <h2 id="sensitive-species">My collection contains sensitive species. Should we publish these?</h2>
-      <p>Your concerns are shared by many herbaria and museums around the world. GBIF has released a set of guidelines for publishing sensitive data <a href="https://docs.gbif.org/sensitive-species-best-practices/master/en/">https://docs.gbif.org/sensitive-species-best-practices/master/en/</a>. </p>
-      <p>We have a checklist published of sensitive species of Tajikistan. When we upload these, our script matches .... actually what should we do?</p>
+      <h2 id="sensitive-species">My collection contains sensitive species targeted by e.g. plant collectors or the pharmaceutical industry. Should we publish these?</h2>
+      <p>Yes, you should publish these records. However, your concerns are shared by many herbaria and museums around the world. GBIF has released a set of guidelines for publishing sensitive data <a href="https://docs.gbif.org/sensitive-species-best-practices/master/en/">https://docs.gbif.org/sensitive-species-best-practices/master/en/</a>. </p>
+      <p>GBIF Tajikistan should publish a checklist of sensitive species of Tajikistan. Once this is in place, we can check species against this list and obscure the label, so it is not possible to view locality information.</p>
 
-      <h2 id="what-why-qr">What are QR codes?</h2>
+      <h2 id="what-why-qr">What are QR codes? <a href="#" onclick="history.back()">Go back</a></h2>
       <p>Before we can scan any herbarium specimen, we need to stick on a QR code with unique identifier (UUID). This way we can be sure we are not scanning any specimen twice. It will also give us a way to quickly connect herbarium specimen with its published record when we want to use herbarium specimen for future studies.</p>
       <p><a href="https://ru.wikipedia.org/wiki/QR-%D0%BA%D0%BE%D0%B4">QR codes</a> are easily machine readable images containing data. In our case we want this data to be a unique identifier that never repeats so we use <a href="https://ru.wikipedia.org/wiki/UUID">UUIDs</a>. A UUID is a string of characters which is guaranteed to be unique.</p>
 
-      <h3 id="where-qr">Get UUID QR codes from Samariddin</h3>
+      <h2 id="where-qr">Get UUID QR codes from the Tajik GBIF node <a href="#" onclick="history.back()">Go back</a></h2>
       <p>Samariddin can print QR codes on sticky labels, and post them or take them to your institution. Then you just pull off a label and stick it onto the specimen. Alternatively, you can generate your own QR codes, print them and stick them onto the specimens.</p>
 
-      <h2 id="scanner-software-installation">Scanner software installation</h1>
+      <h2 id="scanner-setup">Scanner setup <a href="#" onclick="history.back()">Go back</a></h1>
       <p>The scanners used are <a href="https://www.irislink.com/EN-AU/c2234/IRIScanDesk6Pro-A3-Document-scanner.aspx">IRIScan Desk 6 Pro</a>. For this part of the process you&#39;ll need to be connected to the internet.</p>
       <ul>
       <li>Download scanning software: <a href="https://storage.gbif-no.sigma2.no/minio/misc/iriscan-software/IRIScan_Desk_Setup.exe">https://storage.gbif-no.sigma2.no/minio/misc/iriscan-software/IRIScan_Desk_Setup.exe</a> or download it from the manufacturer&#39;s <a href="https://storage.gbif-no.sigma2.no/minio/misc/iriscan-software/IRIScan_Desk_Setup.exe">website</a></li>
       <li>Install the software on your machine. You may need admin rights for this.</li>
       </ul>
-      <h3 id="scanner-setup">Scanner setup</h2>
       <h4 id="hardware">Hardware</h3>
       <p>Your scanner should include following items:
       <img src="img/scanner-overview.png" alt="image"></p>
@@ -130,10 +130,10 @@
       <blockquote>
       <p><strong><em>NOTE:</em></strong> After connecting everything to your computer, there should be a red light visible on the external capture button (5). If this is not the case, try plugging the USB cable (3) to the different port in your computer.</p>
       </blockquote>
-      <h4 id="software">Software</h3>
+      <h2 id="software">Scanner software <a href="#" onclick="history.back()">Go back</a></h2>
       <p>After you set up your scanner you can start the scanning software (IriScan Desk Pro).
-      Now we can setup the necessary settings to make our scanned herbarium specimens easily publishable. These settings should be needed only on the first start of the scanning software, but check them anyway - better safe then sorry. Here is an overview of the user interface:
-      <img src="img/scanning-software-annotated.png" alt="image"></p>
+      Now we can setup the necessary settings to make our scanned herbarium specimens easily publishable. These settings should be needed only on the first start of the scanning software, but check them anyway - better safe then sorry. Here is an overview of the user interface:</p>
+      <img src="img/scanning-software-annotated.png" alt="image" style="max-width: 1012px;"></p>
       <p>Things to set:</p>
       <ul>
       <li>(A) Be sure you are scanning in the <code>Document</code> mode</li>
