Update with published DOIs

--- a/index.html
+++ b/index.html
@@ -92,14 +92,17 @@
         <p>Go to <a href="https://gbif.org">https://gbif.org</a> and search for your institution's name. </p>
         <p>Alternatively, use these links: </p>
         <ul>
-          <li><a href="https://gbif.org/">Khatlon</a></li>
-          <li><a href="https://gbif.org/">TNAS</a></li>
-          <li><a href="https://gbif.org/">TNU</a></li>
-          <li><a href="https://gbif.org/">TPU</a></li>
+          <li><a href="https://www.gbif.org/dataset/4929d4f6-ea8a-40cc-ab3d-0e3a9da01a45">Khatlon</a> - https://doi.org/10.15468/q2y8b2</li>
+          <li><a href="https://www.gbif.org/dataset/15ea8d98-ee42-411d-aff0-6b18afcf9d39">TNU</a> - https://doi.org/10.15468/qwfnw9</li>
+          <li><a href="https://gbif.org/">TPU - NO DATASET CREATED</a></li>
+          <li><a href="https://www.gbif.org/dataset/73948520-f969-40bf-9d2a-1c352fb2db5f">TNAS (new uploads)</a> - https://doi.org/10.15468/9xjs98</li>
+          <li><a href="https://www.gbif.org/dataset/d4b0f477-0ddf-4c47-a1fe-a7ffed28788e">TNAS (BRAHMS)</a> - https://doi.org/10.15468/ntdjg9</li>
         </ul>
 
         <h2 id="data-correction">I have seen some mistakes on the dataset page for my dataset. How do I correct this?</h2>
-        <p>[More information coming soon...]</p>
+        <p>Go to <a href="https://tajik.ipt.gbif.no/">https://tajik.ipt.gbif.no/</a> (note, this is not the TEST IPT), and log in with your email address and username. You can go to "Manage resources", click on your dataset and edit your metadata as we showed you in the workshop
+          <a target="_blank" href="mailto:helpdesk@gbif.no?Subject=Tajik%20IPT%20reset&body=Please%20send%20me%20a%20new%20password">My password is not working, help!</a>
+        </p>
 
         <h2 id="sensitive-species">My collection contains sensitive species targeted by e.g. plant collectors or the pharmaceutical industry. Should we publish these?</h2>
         <p>Yes, you should publish these records. However, your concerns are shared by many herbaria and museums around the world. GBIF has released a set of guidelines for publishing sensitive data <a href="https://docs.gbif.org/sensitive-species-best-practices/master/en/">https://docs.gbif.org/sensitive-species-best-practices/master/en/</a>. </p>
