--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
       <div class="instruction-block">
         <h2>Finish</h2>
         <p>You have now completed the publication process.</p>
-        <p>We have a script which processes the images, renames them and moves them to a different your location. If you refresh the folder, you will see your images disappearing. When there is a problem with the image, we do not move it but keep in the folder to investigate. Please do not upload the same images twice if they seem to "disappear" from your folder.</p>
+        <p>We have a script which processes the images, renames them and moves them to a different your location. If you refresh the folder, you will see your images disappearing. When there is a problem with the image, we do not move it but keep in the folder to investigate. </p>
+        <div class="alert alert-warning" role="alert"><strong>Please do not upload the same images twice if they seem to "disappear" from your folder.</strong></div>
       </div>
       <hr style="height: 40px;">
       <div id="faqs">
