--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <p>Yes, you should publish these records. However, your concerns are shared by many herbaria and museums around the world. GBIF has released a set of guidelines for publishing sensitive data <a href="https://docs.gbif.org/sensitive-species-best-practices/master/en/">https://docs.gbif.org/sensitive-species-best-practices/master/en/</a>. </p>
         <p>GBIF Tajikistan should publish a checklist of sensitive species of Tajikistan. Once this is in place, we can check species against this list and obscure the label, so it is not possible to view locality information.</p>
 
-        <h2 id="what-why-qr">What are QR codes? <a href="#" onclick="history.back()">Go back</a></h2>
+        <h2 id="what-qr">What are QR codes? <a href="#" onclick="history.back()">Go back</a></h2>
         <p>Before we can scan any herbarium specimen, we need to stick on a QR code with unique identifier (UUID). This way we can be sure we are not scanning any specimen twice. It will also give us a way to quickly connect herbarium specimen with its published record when we want to use herbarium specimen for future studies.</p>
         <p><a href="https://ru.wikipedia.org/wiki/QR-%D0%BA%D0%BE%D0%B4">QR codes</a> are easily machine readable images containing data. In our case we want this data to be a unique identifier that never repeats so we use <a href="https://ru.wikipedia.org/wiki/UUID">UUIDs</a>. A UUID is a string of characters which is guaranteed to be unique.</p>
 
