--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <img src="img/step3.svg">
         <div class="text">
           <h2 id="step3">Step 3</h2>
-          <p>Place the specimen on the scanner mat, and take a picture.</p>
+          <p>Place the specimen on the scanner mat, and take a picture. Note: if there is more than one specimen on the sheet, cover the other specimens with a sheet of thick paper, and scan each of them so that only one is visible at a time.</p>
           <p><a href="#software">How do I take a picture with the scanner?</a></p>
           <p><a href="#software">What scanner settings should I use?</a></p>
         </div>
